--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "antd": "^3.3.0",
     "node-sass": "^4.8.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
