--- a/theink/package.json
+++ b/theink/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
@@ -15,6 +14,8 @@
   },
   "devDependencies": {
     "node-sass": "^4.9.2",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^7.0.3"
   }
 }
