--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "query-string": "^6.2.0",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^6.0.2",
+    "react-native-video": "^3.2.1",
     "react-navigation": "^2.18.2",
     "react-test-renderer": "16.6.0-alpha.8af6728"
   },
