--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.11",
     "metro-react-native-babel-preset": "0.49.0",
     "query-string": "^6.2.0",
+    "react-native-button": "^2.3.0",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^6.0.2",
     "react-native-video": "^3.2.1",
