--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "metro-react-native-babel-preset": "0.49.0",
     "query-string": "^6.2.0",
     "react-native-button": "^2.3.0",
+    "react-native-sk-countdown": "^1.0.1",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^6.0.2",
     "react-native-video": "^3.2.1",
