--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.7.2",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^6.0.6"
   }
 }
