--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -41,7 +41,9 @@
     ]
   },
   "devDependencies": {
+    "customize-cra": "^1.0.0",
     "node-sass": "^4.7.2",
+    "react-app-rewired": "^2.1.8",
     "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^6.0.6"
   }
