--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "customize-cra": "^1.0.0",
+    "mockjs": "^1.1.0",
     "node-sass": "^4.7.2",
     "react-app-rewired": "^2.1.8",
     "redux-devtools-extension": "^2.13.8",
